saint-lascivious.github.io: basic connect how-to, ribbon names
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutfiltereddns.html
 - new file:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   index.html
 - modified:   pokedexoverdns.html
 - modified:   resources/stylesheets/ribbons.css

--- a/aboutfiltereddns.html
+++ b/aboutfiltereddns.html
@@ -76,6 +76,7 @@
           <span class="mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
+            <a class="mdl-navigation__link" href="index.html">Home</a>
             <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           </nav>
@@ -87,6 +88,7 @@
           <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href=""> - <b>About Filtered DNS</b></a>
+          <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
@@ -96,7 +98,7 @@
           <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
         </nav>
       </div>
-      <div class="about-ribbon"></div>
+      <div class="green-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
