--- a/filtereddns.html
+++ b/filtereddns.html
@@ -77,7 +77,8 @@
           <span class="mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href=""><b>Filtered DNS</b></a>
+            <a class="mdl-navigation__link" href="index.html">Home</a>
+            <a class="mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
             <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           </nav>
         </div>
@@ -88,6 +89,7 @@
           <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href=""><b>Filtered DNS</b></a>
           <a class="mdl-navigation__link" href="aboutfiltereddns.html"> - About Filtered DNS</a>
+          <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
@@ -97,13 +99,13 @@
           <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
         </nav>
       </div>
-      <div class="dns-ribbon"></div>
+      <div class="deep_purple-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="#filtereddns"><b>Filtered DNS</b></a> &gt; <a href="aboutfiltereddns.html">About Filtered DNS</a>
+              <a href="index.html">Home</a> &gt; <a href="#filtereddns"><b>Filtered DNS</b></a>
             </div>
           </div>
         </div>
