--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -53,7 +53,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.orange-red.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.green-red.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
@@ -98,13 +98,13 @@
           <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
         </nav>
       </div>
-      <div class="orange-ribbon"></div>
+      <div class="green-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#connecttosainternet"><b>Connect to Sainternet</b></a><br><a href="#androidprivatedns">Android Private DNS</a>, <a href="#googlechrome">Google Chrome/Chromium</a>
+              <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#connecttosainternet"><b>Connect to Sainternet</b></a><br><a href="#androidprivatedns">Android Private DNS</a>, <a href="#googlechrome">Google Chrome/Chromium</a>, <a href="#mozillafirefox">Mozilla Firefox</a>
             </div>
           </div>
         </div>
@@ -122,10 +122,10 @@
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="androidprivatedns">Android Private DNS</h3>
               <p align="center">
-                Android 10+
+                Android 9 (Pie) or higher required.
               </p>
               <p>
-                Settings -> Search -> Search for "Private DNS" -> Select "Private DNS" -> Select "Designated Private DNS" -> Enter "<b>dns.sainternet.xyz</b>" -> Done.
+                Settings → Search → Search for "Private DNS" → Select "Private DNS" → Select "Designated Private DNS" → Enter "<b>dns.sainternet.xyz</b>" → Done.
               </p>
            </div>
         </div>
@@ -134,7 +134,16 @@
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="googlechrome">Google Chrome/Chromium</h3>
               <p>
-                Overflow Menu (three dots, top right corner) -> Settings -> Select "Privacy and security" -> Select "Use secure DNS" -> Select "Choose another provider" -> Enter "<b>dns.sainternet.xyz</b>" -> Done.
+                Overflow Menu (three dots, top right corner) → Settings → Select "Privacy and security" → Select "Use secure DNS" → Select "Choose another provider" → Enter "<b>dns.sainternet.xyz</b>" → Done.
+              </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <h3 id="mozillafirefox">Mozilla Firefox</h3>
+              <p>
+                Menu → Settings → Select "General" → Select "Network Settings" → Select "Settings" → Select "Enable DNS over HTTPS" → Select "Use Provider" → Select "Custom" → Enter "<b>dns.sainternet.xyz</b>" → Select "OK" → Done.
               </p>
            </div>
         </div>
