saint-lascivious.github.io: new page, test sainternet
and the usual musket blast of random assorted changes

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - renamed:    aboutfiltereddns.html -> aboutsainternet.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   index.html
 - modified:   pokedexoverdns.html
 - new file:   testsainternet.html

--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16.png">
 
     <!-- SEO -->
-    <link rel="canonical" href="https://sainternet.xyz/404.html/">
+    <link rel="canonical" href="https://sainternet.xyz/404.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
     <!-- Styles -->
@@ -116,7 +116,7 @@
                 <source srcset="resources/images/luxio-shiny.png" media="(prefers-color-scheme: dark)">
                 <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
               </picture>
-              <p>
+              <p align="center">
                 A wild <b>Luxio</b> appeared!
               </p>
               <p>
