--- a/testsainternet.html
+++ b/testsainternet.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  sainternet.xyz - aboutfiltereddns.html
+  sainternet.xyz - testsainternet.html
   Copyright 2022 saint-lascivious (Hayden Pearce). All rights reserved.
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -47,14 +47,15 @@
     <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16.png">
 
     <!-- SEO -->
-    <link rel="canonical" href="https://sainternet.xyz/404.html/">
+    <link rel="canonical" href="https://sainternet.xyz/testsainternet.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
     <!-- Styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.yellow-red.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-red.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/pre.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
     <style>
@@ -87,8 +88,9 @@
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href=""> - <b>About Filtered DNS</b></a>
+          <a class="mdl-navigation__link" href="aboutfiltereddns.html"> - About Sainternet</a>
           <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
+          <a class="mdl-navigation__link" href=""> - <b>Test Sainternet</b></a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
@@ -98,71 +100,95 @@
           <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
         </nav>
       </div>
-      <div class="yellow-ribbon"></div>
+      <div class="blue-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#aboutfiltereddns"><b>About Filtered DNS</b></a><br><a href="#dnsdist">dnsdist</a>, <a href="#dnsproxy">dnsproxy</a>, <a href="#piholeftl">pihole-FTL</a>, <a href="#unbound">unbound</a>
+              <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#testsainternet"><b>Test Sainternet</b></a><br><a href="#usingdig">Using dig</a>, <a href="#usingdnslookup">Using dnslookup</a>, <a href="#usingnslookup">Using nslookup</a>
             </div>
           </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="aboutfiltereddns">About Filtered DNS</h3>
+            <h3 id="connecttosainternet">Test Sainternet</h3>
               <p>
-                Sainternet Filtered DNS is made possible using, but neither endorsed nor condoned by, the following projects.
+                The following describes testing Sainternet Filtered DNS using several methods, utilities.
               </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="dnsdist">dnsdist</h3>
+            <h3 id="usingdig">Using dig</h3>
               <p>
-                <a href="https://github.com/PowerDNS/pdns/blob/master/pdns/README-dnsdist.md">dnsdist</a>
+                Example Sainternet test query using <a href="https://linux.die.net/man/1/dig">dig</a>:
               </p>
-              <p>
-                dnsdist is a highly DNS-, <a href="https://wikipedia.org/wiki/Denial-of-service_attack">DoS</a>- and abuse-aware loadbalancer. Its goal in life is to route traffic to the best server, delivering top performance to legitimate users while shunting or blocking abusive traffic.
-              </p>
+              <pre>
+dig +short txt test.sainternet.xyz
+              </pre>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="dnsproxy">dnsproxy</h3>
+            <h3 id="usingdnslookup">Using dnslookup</h3>
               <p>
-                <a href="https://github.com/AdguardTeam/dnsproxy">dnsproxy</a>
+                Example Sainternet test query using <a href="https://github.com/ameshkov/dnslookup">dnslookup</a>:
               </p>
+              <pre>
+RRTYPE=TXT dnslookup test.sainternet.xyz dns.sainternet.xyz
+              </pre>
               <p>
-                A simple DNS proxy server that supports all existing DNS protocols including DNS-over-TLS, DNS-over-HTTPS, DNSCrypt, and DNS-over-QUIC. Moreover, it can work as a DNS-over-HTTPS, DNS-over-TLS or DNS-over-QUIC server.
+                Example Sainternet dnslookup query using the TCP protocol:
               </p>
+              <pre>
+dnslookup example.org tcp://dns.sainternet.xyz
+              </pre>
+              <p>
+                Example Sainternet dnslookup query using the UDP protocol:
+              </p>
+              <pre>
+dnslookup example.org udp://dns.sainternet.xyz
+              </pre>
+              <p>
+                Example Sainternet dnslookup query using the HTTP/2 protocol (DoH):
+              </p>
+              <pre>
+dnslookup example.org https://dns.sainternet.xyz
+              </pre>
+              <p>
+                Example Sainternet dnslookup query using the TLS protocol (DoT):
+              </p>
+              <pre>
+dnslookup example.org tls://dns.sainternet.xyz
+              </pre>
+              <p>
+                Example Sainternet dnslookup query using the HTTP/3 protocol (DoH/3):
+              </p>
+              <pre>
+HTTP3=1 dnslookup example.org h3://dns.sainternet.xyz
+              </pre>
+              <p>
+                Example Sainternet dnslookup query using the QUIC protocol (DoQ):
+              </p>
+              <pre>
+dnslookup example.org quic://dns.sainternet.xyz
+              </pre>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="piholeftl">pihole-FTL</h3>
+            <h3 id="usingnslookup">Using nslookup</h3>
               <p>
-                <a href="https://github.com/pi-hole/FTL">pihole-FTL</a>
+                Example Sainternet test query using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
               </p>
-              <p>
-                FTLDNS (pihole-FTL) provides an interactive API and also generates statistics for <a href="https://pi-hole.net/">Pi-hole®</a>'s Web interface.
-              </p>
-           </div>
-        </div>
-        <div class="sainternet-container mdl-grid">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="unbound">unbound</h3>
-              <p>
-                <a href="https://github.com/NLnetLabs/unbound">unbound</a>
-              </p>
-              <p>
-                Unbound is a validating, recursive, caching DNS resolver. It is designed to be fast and lean and incorporates modern features based on open standards.
-              </p>
+              <pre>
+nslookup -type=txt test.sainternet.xyz
+              </pre>
            </div>
         </div>
         <footer class="sainternet-footer mdl-mini-footer">
