saint-lascivious.github.io: fix leftover links from name change
s/aboutfiltereddns/aboutsainternet/

Changes to be committed:
 - modified:   filtereddns.html
 - modified:   testsainternet.html

--- a/testsainternet.html
+++ b/testsainternet.html
@@ -88,7 +88,7 @@
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="aboutfiltereddns.html"> - About Sainternet</a>
+          <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Sainternet</a>
           <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="mdl-navigation__link" href=""> - <b>Test Sainternet</b></a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
