--- a/filtereddns.html
+++ b/filtereddns.html
@@ -88,7 +88,7 @@
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href=""><b>Filtered DNS</b></a>
-          <a class="mdl-navigation__link" href="aboutfiltereddns.html"> - About Sainternet</a>
+          <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Sainternet</a>
           <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
@@ -164,7 +164,7 @@
                 Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.
               </p>
               <p>
-                You can find information about the technologies powering Sainternet Filtered DNS <a href="aboutfiltereddns.html">here</a>.
+                You can find information about the technologies powering Sainternet Filtered DNS <a href="aboutsainternet.html">here</a>.
               </p>
           </div>
         </div>
