saint-lascivious.github.io: baby's first javascript
cleanup after mdl-layout drawer component with event listener

the drawer expects links to be external, and doesn't close

allow drawer to link to internal references without
leaving the drawer hanging open

Changes to be committed:
 - modified:   404.html
 - modified:   aboutsainternet.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   index.html
 - modified:   pokedexoverdns.html
 - new file:   resources/javascript/sainternet.js
 - modified:   testsainternet.html

--- a/404.html
+++ b/404.html
@@ -72,6 +72,7 @@
     </style>
   </head>
   <body>
+    <script src="resources/javascript/sainternet.js"></script>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
@@ -88,7 +89,7 @@
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="index.html">Home</a>
-          <a class="mdl-navigation__link" href=""> - <b>???</b></a>
+          <a class="mdl-navigation__link" href="#pokemon404"> - <b>???</b></a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
