--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -70,6 +70,7 @@
     </style>
   </head>
   <body>
+    <script src="resources/javascript/sainternet.js"></script>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
@@ -88,7 +89,7 @@
           <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Filtered DNS</a>
-          <a class="mdl-navigation__link" href=""> - <b>Connect to Sainternet</b></a>
+          <a class="mdl-navigation__link" href="#connecttosainternet"> - <b>Connect to Sainternet</b></a>
           <a class="mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
