--- a/filtereddns.html
+++ b/filtereddns.html
@@ -71,6 +71,7 @@
     </style>
   </head>
   <body>
+    <script src="resources/javascript/sainternet.js"></script>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
@@ -87,7 +88,7 @@
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="index.html">Home</a>
-          <a class="mdl-navigation__link" href=""><b>Filtered DNS</b></a>
+          <a class="mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
           <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Sainternet</a>
           <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
