--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
   </head>
   <body>
+    <script src="resources/javascript/sainternet.js"></script>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
@@ -75,7 +76,7 @@
       <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href=""><b>Home</b></a>
+          <a class="mdl-navigation__link" href="#welcome"><b>Home</b></a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
