--- a/testsainternet.html
+++ b/testsainternet.html
@@ -71,6 +71,7 @@
     </style>
   </head>
   <body>
+    <script src="resources/javascript/sainternet.js"></script>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
@@ -90,7 +91,7 @@
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Sainternet</a>
           <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
-          <a class="mdl-navigation__link" href=""> - <b>Test Sainternet</b></a>
+          <a class="mdl-navigation__link" href="#testsainternet"> - <b>Test Sainternet</b></a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
@@ -113,7 +114,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="connecttosainternet">Test Sainternet</h3>
+            <h3 id="testsainternet">Test Sainternet</h3>
               <p>
                 The following describes testing Sainternet Filtered DNS using several methods, utilities.
               </p>
