--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -71,6 +71,7 @@
     </style>
   </head>
   <body>
+    <script src="resources/javascript/sainternet.js"></script>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
@@ -88,7 +89,7 @@
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href=""><b>Pokédex over DNS</b></a>
+          <a class="mdl-navigation__link" href="#pokedexoverdns"><b>Pokédex over DNS</b></a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
         <nav class="mdl-navigation">
