--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
   </head>
   <body>
-    <script src="resources/javascript/sainternet.js"></script>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
@@ -121,5 +120,6 @@
       </main>
     </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script type="text/javascript" src="resources/javascript/sainternet.js"></script>
   </body>
 </html>
