--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -53,7 +53,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.green-red.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_green-red.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
@@ -90,6 +90,7 @@
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Filtered DNS</a>
           <a class="mdl-navigation__link" href="#connecttosainternet"> - <b>Connect to Sainternet</b></a>
+          <a class="mdl-navigation__link" href="portsandprotocols.html"> - Ports and Protocols</a>
           <a class="mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
@@ -100,7 +101,7 @@
           <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
         </nav>
       </div>
-      <div class="green-ribbon"></div>
+      <div class="light_green-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -122,30 +123,30 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="androidprivatedns">Android Private DNS</h3>
+            <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon> Android Private DNS</h3>
               <p align="center">
                 Android 9 (Pie) or higher required.
               </p>
               <p>
-                Settings → Search → Search for "Private DNS" → Select "Private DNS" → Select "Designated Private DNS" → Enter "<b>dns.sainternet.xyz</b>" → Done.
+                Settings <icon class="fa-solid fa-cog"></icon> <icon class="fa-solid fa-right-long"></icon> Search <icon class="fa-solid fa-magnifying-glass"></icon> <icon class="fa-solid fa-right-long"></icon> Search for "Private DNS" <icon class="fa-solid fa-right-long"></icon> Select "Private DNS" <icon class="fa-solid fa-right-long"></icon> Select "Designated Private DNS" <icon class="fa-solid fa-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>" <icon class="fa-solid fa-right-long"></icon> Done.
               </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="googlechrome">Google Chrome/Chromium</h3>
+            <h3 id="googlechrome"><icon class="fa-brands fa-chrome"></icon> Google Chrome/Chromium</h3>
               <p>
-                Overflow Menu (three dots, top right corner) → Settings → Select "Privacy and security" → Select "Use secure DNS" → Select "Choose another provider" → Enter "<b>dns.sainternet.xyz</b>" → Done.
+                Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon> <icon class="fa-solid fa-cog"></icon> <icon class="fa-solid fa-right-long"></icon> Settings <icon class="fa-solid fa-right-long"></icon> Select "Privacy and security" <icon class="fa-solid fa-right-long"></icon> Select "Use secure DNS" <icon class="fa-solid fa-right-long"></icon> Select "Choose another provider" <icon class="fa-solid fa-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>" <icon class="fa-solid fa-right-long"></icon> Done.
               </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="mozillafirefox">Mozilla Firefox</h3>
+            <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon> Mozilla Firefox</h3>
               <p>
-                Menu → Settings → Select "General" → Select "Network Settings" → Select "Settings" → Select "Enable DNS over HTTPS" → Select "Use Provider" → Select "Custom" → Enter "<b>dns.sainternet.xyz</b>" → Select "OK" → Done.
+                Menu <icon class="fa-solid fa-bars"></icon> <icon class="fa-solid fa-right-long"></icon> Settings <icon class="fa-solid fa-cog"></icon> <icon class="fa-solid fa-right-long"></icon> Select "General" <icon class="fa-solid fa-right-long"></icon> Select "Network Settings" <icon class="fa-solid fa-right-long"></icon> Select "Settings" <icon class="fa-solid fa-right-long"></icon> Select "Enable DNS over HTTPS" <icon class="fa-solid fa-right-long"></icon> Select "Use Provider" <icon class="fa-solid fa-right-long"></icon> Select "Custom" <icon class="fa-solid fa-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>" <icon class="fa-solid fa-right-long"></icon> Select "OK" <icon class="fa-solid fa-right-long"></icon> Done.
               </p>
            </div>
         </div>
@@ -163,5 +164,6 @@
     </div>
     <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script type="text/javascript" src="resources/javascript/sainternet.js"></script>
   </body>
 </html>
