--- a/filtereddns.html
+++ b/filtereddns.html
@@ -57,7 +57,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
-    <link rel="stylesheet" href="resources/stylesheets/table.css">
     <style>
     #button_home {
       position: fixed;
@@ -91,6 +90,7 @@
           <a class="mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
           <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Sainternet</a>
           <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
+          <a class="mdl-navigation__link" href="portsandprotocols.html"> - Ports and Protocols</a>
           <a class="mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
@@ -118,43 +118,6 @@
               <p>
                 Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over all your favourite acronyms.
               </p>
-              <table>
-                <tr>
-                  <th>Protocol</th>
-                  <th>Address</th>
-                  <th>Port</th>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
-                  <td>dns.sainternet.xyz</td>
-                  <td>TCP 443</td>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
-                  <td>dns.sainternet.xyz</td>
-                  <td>UDP 443</td>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
-                  <td>119.224.127.171</td>
-                  <td>TCP 53</td>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
-                  <td>dns.sainternet.xyz</td>
-                  <td>TCP 853</td>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
-                  <td>119.224.127.171</td>
-                  <td>UDP 53</td>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
-                  <td>dns.sainternet.xyz</td>
-                  <td>UDP 784<br>UDP 853<br>UDP 8853</td>
-                </tr>
-              </table>
               <p>
                 Sainternet Filtered DNS blocks many domains known to be associated with unsavoury behaviours (including but not limited to advertising, botnets, malware, spam and telemetry), using a variety of methods updated regularly.
               </p>
@@ -183,5 +146,6 @@
     </div>
     <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script type="text/javascript" src="resources/javascript/sainternet.js"></script>
   </body>
 </html>
