--- a/testsainternet.html
+++ b/testsainternet.html
@@ -167,10 +167,16 @@ dnslookup example.org https://dns.sainternet.xyz
 dnslookup example.org tls://dns.sainternet.xyz
               </pre>
               <p>
+                Example Sainternet dnslookup query using the HTTP/3 protocol (DoH/3) opportunistically:
+              </p>
+              <pre>
+HTTP3=1 dnslookup example.org https://dns.sainternet.xyz
+              </pre>
+              <p>
                 Example Sainternet dnslookup query using the HTTP/3 protocol (DoH/3):
               </p>
               <pre>
-HTTP3=1 dnslookup example.org h3://dns.sainternet.xyz
+dnslookup example.org h3://dns.sainternet.xyz
               </pre>
               <p>
                 Example Sainternet dnslookup query using the QUIC protocol (DoQ):
@@ -206,5 +212,6 @@ nslookup -type=txt test.sainternet.xyz
     </div>
     <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script type="text/javascript" src="resources/javascript/sainternet.js"></script>
   </body>
 </html>
