saint-lascivious.github.io: give 404 its own drawer class
(it was a subcategory of home previously)

now it's

???
 - ???

which puts emphasis on being lost, at least in my mind

Changes to be committed:
 - modified:   404.html

--- a/404.html
+++ b/404.html
@@ -88,9 +88,12 @@
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="index.html">Home</a>
-          <a class="mdl-navigation__link" href="#pokemon404"> - <b>???</b></a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+        </nav>
+        <span class="mdl-layout-title">???</span>
+          <a class="mdl-navigation__link" href="#pokemon404"> - <b>???</b></a>
+        <nav class="mdl-navigation">
         </nav>
         <span class="mdl-layout-title">GitHub</span>
         <nav class="mdl-navigation">
