saint-lascivious.github.io: move home button css
remember to set default button display to none

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutsainternet.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - new file:   resources/stylesheets/button_home.css
 - modified:   resources/stylesheets/sainternet.css
 - modified:   testsainternet.html

--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -55,19 +55,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.green-red.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/button_home.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
     <link rel="stylesheet" href="resources/stylesheets/table.css">
-    <style>
-    #button_home {
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      margin-right: 30px;
-      margin-bottom: 30px;
-      z-index: 900;
-    }
-    </style>
   </head>
   <body>
     <script src="resources/javascript/sainternet.js"></script>
